[build-system]
requires = ["setuptools >= 60"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-forge"
version = "2024.0.0"
description = "A tool to manage building cross-platform binary wheels for mobile devices"
readme = { file = "README.md", content-type = "text/x-rst"}
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "Russell Keith-Magee", email = "russell@keith-magee.com"}
]
maintainers = [
    {name = "Russell Keith-Magee", email = "russell@keith-magee.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    # Use a post 1.5.0 release that includes the merged iOS patch
    "crossenv @ git+https://github.com/benfogle/crossenv@c801a526403a06f653939a0c45534d7703f9066f",
    "httpx == 0.28.1",
    "Jinja2 == 3.1.6",
    "jsonschema == 4.25.1",
    "packaging == 25.0",
    "PyYAML == 6.0.3",
    "tomli >= 2.0,< 3.0; python_version <= '3.10'",
    "wheel == 0.45.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit == 4.4.0",
]

[project.urls]
Homepage = "https://beeware.org"
Funding = "https://beeware.org/contributing/membership/"
Repository = "https://github.com/beeware/mobile-forge.git"
Tracker = "https://github.com/beeware/briefcase/issues"

[project.scripts]
forge = "forge.__main__:main"
forge-env = "forge.cross:main"

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
    # The SIM rules are *very* opinionated, and don't necessarily make for better code.
    # They may be worth occasionally turning on just to see if something could actually
    # use improvement.
    # "SIM",    # flake8-simplify
]

[tool.codespell]
skip = '.git,*.pdf,*.svg'
# the way to make case sensitive skips of words etc
ignore-regex = '\bNd\b'
# case insensitive
# ignore-words-list = ''
