[build-system]
requires = ["setuptools == 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-forge"
version = "2024.0.0"
description = "A tool to manage building cross-platform binary wheels for mobile devices"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Russell Keith-Magee", email = "russell@keith-magee.com"}
]
maintainers = [
    {name = "Russell Keith-Magee", email = "russell@keith-magee.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    "crossenv == 1.6.1",
    "httpx == 0.28.1",
    "Jinja2 == 3.1.6",
    "jsonschema == 4.25.1",
    "packaging == 25.0",
    "PyYAML == 6.0.3",
    "tomli >= 2.0,< 3.0; python_version <= '3.10'",
    "wheel == 0.46.2",
]

[dependency-groups]
pre-commit = [
    "pre-commit == 4.5.1",
]

dev = [
    {include-group = "pre-commit"},
]

[project.urls]
Homepage = "https://beeware.org"
Funding = "https://beeware.org/contributing/membership/"
Repository = "https://github.com/beeware/mobile-forge.git"
Tracker = "https://github.com/beeware/briefcase/issues"

[project.scripts]
forge = "forge.__main__:main"
forge-env = "forge.cross:main"

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
    # The SIM rules are *very* opinionated, and don't necessarily make for better code.
    # They may be worth occasionally turning on just to see if something could actually
    # use improvement.
    # "SIM",    # flake8-simplify
]

[tool.codespell]
skip = '.git,*.pdf,*.svg'
# the way to make case sensitive skips of words etc
ignore-regex = '\bNd\b'
# case insensitive
# ignore-words-list = ''
